# psychoanalyze

./: .coveragerc  .gitignore  .isort.cfg  AUTHORS.rst  LICENSE.txt  README.md  README.rst  dashboard.py  environment.yaml  explore.ipynb  pyproject.toml  setup.cfg  setup.py
dashboards/: data_app.py  detection.py
data/: 1-normalized.h5  2-calculated.h5  2.1-calculated-backup.h5
data/0-raw/: U20160926.txt  U20161007.txt  U20161010.txt  U20161011.txt  U20161012.txt  U20161013.txt  U20161014.txt  U20161018.txt  U20161019.txt  U20161020.txt  U20161026.txt  U20161101.txt  U20161102.txt  U20161110.txt  U20161111.txt  U20161114.txt  U20161115.txt  U20161117.txt  U20161118.txt  U20161121.txt  U20161122.txt  U20161128.txt  U20161129.txt  U20161201.txt  U20161207.txt  U20161209.txt  U20161214.txt  U20161215.txt  U20161216.txt  U20161219.txt  U20161221.txt  U20161228.txt  U20161230.txt  U20170102.txt  U20170104.txt  U20170105.txt  U20170110.txt  U20170111.txt  U20170112.txt  U20170117.txt  (+167 more)
data/0-raw/.ipynb_checkpoints/: U20160929-checkpoint.txt  U20170212-checkpoint.txt  U20170224-checkpoint.txt  U20170324-checkpoint.txt  U20170328-checkpoint.txt  U20170329-checkpoint.txt  U20170511-checkpoint.txt  Y20160909-checkpoint.txt  Y20160926-checkpoint.txt  Y20161213-checkpoint.txt  Y20170217-checkpoint.txt  Y20170221-checkpoint.txt  Y20170228-checkpoint.txt  Y20170302-checkpoint.txt  Y20170310-checkpoint.txt  Y20170316-checkpoint.txt  Z20161212-checkpoint.txt
data/0-raw/trial_data/: U20160927.txt  U20160928.txt  U20161003.txt  U20161005.txt  U20161006.txt  U20161017.txt  U20161021.txt  U20161025.txt  U20161031.txt  U20161103.txt  U20161104.txt  U20161109.txt  U20161116.txt  U20161130.txt  U20161202.txt  U20161208.txt  U20161212.txt  U20161213.txt  U20161220.txt  U20161222.txt  U20161223.txt  U20161226.txt  U20161227.txt  U20161229.txt  U20170103.txt  U20170116.txt  U20170119.txt  U20170120.txt  U20170207.txt  U20170209.txt  U20170211.txt  U20170214.txt  U20170216.txt  (+154 more)
data/1-normalized/: curves.csv  curves_v2.csv  impedances.csv  points.csv  points_v2.csv  sessions.csv
docs/: Makefile  conf.py  index.md  index.rst
notebooks/: 0.0-process_raw_data.ipynb  1.0-calc_values.ipynb  2.0-plot-prep.ipynb  3.0-plot-figs.ipynb  Links.ipynb  data_construction.ipynb  scratch.ipynb  stocks_plotly.ipynb  template.ipynb  thesis-data-redo.ipynb
psychoanalyze/: data.py  factories.py  plot.py  preprocess.py  schemas.py  utils.py
scripts/: train_model.py
src/psychoanalyze/: data.py  outliers.py  plot.py  preprocess.py
tests/: conftest.py  context.py  test_dash.py  test_data.py  test_factories.py  test_plots.py  test_project_layout.py  test_psychoanalyze.py  test_psychoanalyze2.py  test_trials.py  test_weber.py
(+26 files in other folders)
