[tool.poetry]
name = "psychoanalyze"
version = "0.1.0"
description = "Tools for handling, analyzing, and visualizing psychophysics data."
authors = ["Tyler Schlichenmeyer <tyler.schlichenmeyer@gmail.com>"]
license = "MIT"
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.9"
plotly = "^4.14.3"
pandas = "^1.2.3"
pandera = "^0.6.3"
tables = "^3.6.1"
hypothesis = "^6.9.0"
datatest = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.9.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
